--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-  <meta charset="utf-8" />
+   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
 
-  <title>This is BD, bitches!</title>
+  <title>Brian Donahue - music for adults.</title>
 
   <!-- Included CSS Files -->
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/contentflow.css">
   <link rel="stylesheet" href="css/briandonahue.css">
-  <link rel="stylesheet" href="css/forkit.css">
+  <link rel="stylesheet" href="css/fontello.css">
+  <link rel="stylesheet" href="css/fontello-codes.css">
+  <link rel="stylesheet" href="css/fontello-ie7.css">    
+  <link rel="stylesheet" href="css/fontello-ie7-codes.css">
+
 
 
   <script src="javascripts/modernizr.foundation.js"></script>
@@ -140,7 +144,7 @@
             <div class="globalCaption"></div>
            <div class="scrollbar"><div class="slider"></div></div>
         </div>        
-
+        <a class="arrow icon-left-open" data-direction="left" href="#link"></a> <a class="arrow icon-right-open" data-direction="right" href="#link"></a>
       </div>
     </div>
   </section>
@@ -186,18 +190,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script src="js/jquery.ui.js"></script>
   <script src="js/contentflow.js"></script>
-  <script>
+  <script src="js/jquery.backgroundSize.js"></script>
 
-  </script>
-
-  <script>
-  $(function(){
-
-    //$('.flexslider').flexslider({
-      //animation:'slide'
-    //});
-  })
-  </script>
 
 
   <!-- Initialize JS Plugins -->
