Picked different tracks, removed unicode heart

--- a/index.html
+++ b/index.html
@@ -97,17 +97,17 @@
     <div class="row">
       <div class="six columns">
         <h1>Solo</h1>
-        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F54763227&show_artwork=true"></iframe>
-        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F54763187&show_artwork=true"></iframe>
-        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F54763100&show_artwork=true"></iframe>
-        <p id="buy-left-row">♥ these songs? Buy on <a href="http://www.cdbaby.com/cd/bdonahue">CDBaby</a> or <a href="http://itunes.apple.com/us/album/strangest-love/id5927499">iTunes.</a></p>
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F54762938&amp;auto_play=false&amp;show_artwork=true&amp;color=ff7700"></iframe>
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F54762867&show_artwork=true"></iframe>
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F54762800&show_artwork=true"></iframe>
+        <p id="buy-left-row">Like these songs? Buy on <a href="http://www.cdbaby.com/cd/bdonahue">CDBaby</a> or <a href="http://itunes.apple.com/us/album/strangest-love/id5927499">iTunes.</a></p>
       </div>      
       <div class="six columns">
         <h1>with Glori-H</h1>
-        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F54763601&show_artwork=true"></iframe>
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F54763007&show_artwork=true"></iframe>
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F54763260&show_artwork=true"></iframe>
         <iframe width="100%" height="166" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F54763561&show_artwork=true"></iframe>
-        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F54763469&show_artwork=true"></iframe>
-        <p>♥ these songs? Buy on <a href="http://www.cdbaby.com/cd/glorih">CDBaby</a> or <a href="http://itunes.apple.com/us/album/glori-h/id5086449">iTunes.</a></p>
+        <p>Like these songs? Buy on <a href="http://www.cdbaby.com/cd/glorih">CDBaby</a> or <a href="http://itunes.apple.com/us/album/glori-h/id5086449">iTunes.</a></p>
 
       </div>
     </div>
